Fixed some merging problems. Wrote Preprocessing

--- a/Untitled Folder/MinimalProject.ipynb
+++ b/Untitled Folder/MinimalProject.ipynb
@@ -30,13 +30,13 @@
     "\n",
     "I wanted to use distributed computing to investigate these frequencies in a larger body of work, specifically choosing Reddit data. Reddit.com is a website on which users can create and contribute to forums called 'subreddits.' Subreddits cover a vast number of subjects including various mental illnesses, computing and gaming, sports, politics, the economy, and a large number of 'adult' topics. The dataset I've collected to use here is in csv format and includes information about approximately 1200 subreddits to which users have contibuted text posts of at least 100 words in length. It includes the following columns: \n",
     "\n",
-    "-Subreddit - The name a subreddit (<=20 characters)\n",
+    "- Subreddit - The name a subreddit (<=20 characters)\n",
     "- Posts - A count of posts with 100 or more words in each subreddit\n",
     "- Wordcount - A sum of the total number of words in all posts in that subreddit\n",
     "- 65 additional columns, each containing the frequency of words in a specific dictionary \n",
     "\n",
     "  + 64 from an outdated version of LIWC plus the absolutist dictionary mentioned above.\n",
-    "  + Freq - the frequency of words from each dictionary calculated as: \n",
+    "  + The frequency is calculated as: \n",
     "  \n",
     "  $$\\frac{number\\ of\\ words\\ matching\\ dictionary}{number\\ of\\ total\\ words}$$\n",
     "  \n",
@@ -52,7 +52,7 @@
     "\n",
     "### Packages and  Reading data\n",
     "\n",
-    "For this project I am using numpy to store my purely numerical data execute operations over large arrays and matrixes. Providing additional support for numpy arrays is pandas, which is useful for accessing columns of data by a variable name and for labeling rows with an  index name. I am also using m"
+    "For this project I am using numpy to store my purely numerical data execute operations over large arrays and matrixes. Providing additional support for numpy arrays is pandas, which is useful for accessing columns of data by a variable name and for labeling rows with an  index name. I am also using Matplotlib's pyplot to produce a few scatter plots of the data projected onto its first two components. "
    ]
   },
   {
@@ -78,9 +78,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### Preprocessing\n",
-    "In preprocessing, the data was already in a .csv file from my previous project collecting these numbers for Machine Learning. The only change that was necessary was to normalize the values to between 0 and 1 so that naturally higher numbers, such as functional word frequency, didn't receive unnecessary priority over lower values, such as leisure words. I wrote my own functions to do that (even though it's a fairly simple procedure probably and probably available in a package) in order to %something about the value of practice and exercise or repetition%. \n"
+    "\n",
+    "Because statistics for subreddits with a smaller number of posts vary so much more than subreddits with for which data was calculated from larger sample size, I've also curated a smaller subset of the data including only the  half of subreddits with the most posts. This I read into to variable subset_inputs from a local csv.\n",
+    "\n",
+    "Because this is my own dataset, the only additional preprocessing necessary was to normalize the values. The functions below normalize each column of the dataset to a range between 0 and 1, so that variation in dictionaries that have naturally higher values, such as functional word frequency, would not have greater impact on PCA and clustering than variation in dictionaries which occur with lower frequency: leisure words for example."
    ]
   },
   {
